--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "build:prod": "npm run build -- --prod --aot",
     "test": "ng test",
@@ -56,11 +56,13 @@
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
     "echarts": "^4.0.2",
+    "express": "^4.16.3",
     "font-awesome": "4.7.0",
     "hammerjs": "^2.0.8",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
+    "mysql": "^2.15.0",
     "nebular-icons": "1.0.6",
     "ng2-ckeditor": "1.1.13",
     "ng2-smart-table": "1.2.2",
